@@ -7,7 +7,6 @@ import java.nio.file.Paths;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.UrlResource;
 import org.springframework.http.HttpHeaders;
@@ -38,7 +37,7 @@ public class LogController {
 
         List<String> filteredLines = Files.lines(logPath)
                 .filter(line -> line.startsWith(targetDate.format(LOG_DATE_FORMAT)))
-                .collect(Collectors.toList());
+                .toList();
 
         if (filteredLines.isEmpty()) {
             return ResponseEntity.noContent().build();
